--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Birthday Damilola 🎂</title>
+  <title>Happy Birthday X 🎂</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/png" href="cake.png" />
   <link
@@ -16,7 +16,7 @@
 
   <!-- Landing -->
   <div class="landing">
-    <h1>🎉 Happy Birthday Damilola 🎉</h1>
+    <h1>🎉 Happy Birthday X 🎉</h1>
     <div class="cake">
       <img src="cake.gif" alt="Birthday Cake" />
     </div>
@@ -42,7 +42,7 @@
   <!-- Letter -->
 <div id="letter" class="hidden">
   <div class="letter-content">
-    <h3>Happy Birthday, Damilola!</h3>
+    <h3>Happy Birthday, X!</h3>
 
     <p>I remember the very first day we met. You were sitting right across from me, looking so demure 😁. We had our first conversation that day, and none of us could have guessed that it would be the beginning of such a special bond.</p>
 
@@ -55,7 +55,7 @@
     <p>May all your dreams come true, may you always find strength in every challenge, and may your heart be filled with as much joy as you’ve brought into my life.</p>
 
     <p>I love you so much,</p>
-    <p><strong>— Your Sugar Boo 💖</strong></p>
+    <p><strong>— Your Baby 💖</strong></p>
   </div>
 </div>
 
